crates/vouched/tests/ui/vouched/cast_non_integer.stderr
error: cast(...) is only supported for integer types: i8, i16, i32, i64, i128, u8, u16, u32, u64, u128
 --> tests/ui/vouched/cast_non_integer.rs:6:19
  |
6 | struct NotInteger(String);
  |                   ^^^^^^
